updated some error in form

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@
 
 DATABASE_URL="mongodb+srv://kivanchnet:kivanchnet@cluster0.plz97am.mongodb.net/airbnbClone"
 NEXTAUTH_SECRET= 'NEXTAUTH_SECRET'
+
+GITHUB_ID=a164b62fa6463e3232b9
+GITHUB_SECRET=c85165c6bd8c44839715c8d9c80af548ccc524a7
