--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mongodb": "^3.7.3",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
