added github google auth

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ NEXTAUTH_SECRET= 'NEXTAUTH_SECRET'
 
 GITHUB_ID=a164b62fa6463e3232b9
 GITHUB_SECRET=c85165c6bd8c44839715c8d9c80af548ccc524a7
+
+GOOGLE_CLIENT_ID=62923440217-5iv78v4jri4grh2jvi3h6pndkuh1o6a5.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
