added categories nav

--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ NEXTAUTH_SECRET= 'NEXTAUTH_SECRET'
 GITHUB_ID=a164b62fa6463e3232b9
 GITHUB_SECRET=c85165c6bd8c44839715c8d9c80af548ccc524a7
 
-GOOGLE_CLIENT_ID=62923440217-5iv78v4jri4grh2jvi3h6pndkuh1o6a5.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID='332546272444-6jgbke4tu3q9416k97dcpff7ppq14su1.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='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'
