completed selected input in rentModal

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "leaflet": "^1.9.4",
     "mongodb": "^3.7.3",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.3",
     "tailwindcss": "3.3.2",
     "world-countries": "^4.0.0",
