added image into the rentModal

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ GITHUB_SECRET=c85165c6bd8c44839715c8d9c80af548ccc524a7
 
 GOOGLE_CLIENT_ID='332546272444-6jgbke4tu3q9416k97dcpff7ppq14su1.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="daidocvpm"
