--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 DATABASE_URL="mongodb+srv://kivanchnet:kivanchnet@cluster0.plz97am.mongodb.net/airbnbClone"
 NEXTAUTH_SECRET= 'NEXTAUTH_SECRET'
 
-GITHUB_ID=a164b62fa6463e3232b9
-GITHUB_SECRET=c85165c6bd8c44839715c8d9c80af548ccc524a7
+GITHUB_ID='a164b62fa6463e3232b9'
+GITHUB_SECRET='c85165c6bd8c44839715c8d9c80af548ccc524a7'
 
 GOOGLE_CLIENT_ID='332546272444-6jgbke4tu3q9416k97dcpff7ppq14su1.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='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'
